# scoring-service

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cdk.yml  ci.yml  docker.yml
alembic/: env.py
alembic/versions/: 20250331000000_initial.py
app/: __init__.py  main.py
app/api/: router.py
app/api/routes/: documents.py  health.py  openapi.py  scoring.py
app/core/: config.py  exceptions.py  logging.py  security.py  telemetry.py
app/db/: models.py  session.py
app/db/repositories/: __init__.py  claims.py  documents.py  jobs.py  scores.py
app/llm/: __init__.py  client.py  parser.py  prompts.py  schemas.py
app/schemas/: api_errors.py  common.py  document.py  job.py  score.py
app/scorers/: base.py  claim_verifiability.py  evidence_support.py  hallucination_risk.py  internal_consistency.py  logical_soundness.py
app/services/: aggregation.py  claim_extraction.py  document_service.py  job_notification.py  job_service.py  score_read_service.py  scoring_service.py
app/storage/: s3_client.py
app/workers/: __init__.py  queue.py  scoring_worker.py
docker/: api.Dockerfile  worker.Dockerfile
docs/: api-examples.md  architecture.md  cdk-database.md  developer-guide.md  end-user-guide.md  openapi.json  scoring-model.md  swagger.html
infrastructure/cdk/: app.py  cdk.context.json  requirements.txt
infrastructure/cdk/stacks/: __init__.py  compute_stack.py  database_stack.py  iam_stack.py  network_stack.py  secrets_stack.py  sqs_stack.py  storage_stack.py
scripts/: bootstrap.sh  export_openapi.py  seed_dev_data.py  wait_for_postgres.sh
tests/: conftest.py
tests/contract/: test_openapi_contract.py
tests/e2e/: test_scoring_lifecycle.py
tests/integration/: test_health.py  test_root.py
tests/unit/: test_aggregation.py  test_parser.py  test_prompts.py  test_queue_factory.py
